log
Thu 16 May 2024 05:02:28 PM UTC: 
 tests:  0|5
total_score: 0/70
925edf2
Thu 16 May 2024 05:07:02 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:54:13: error: expected expression before ‘int’
   54 |     int i = int j = 0;
      |             ^~~
sudoku.c:54:9: error: unused variable ‘i’ [-Werror=unused-variable]
   54 |     int i = int j = 0;
      |         ^
cc1: all warnings being treated as errors
Compilation failed
d10b02c
Thu 16 May 2024 05:07:25 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:54:13: error: ‘j’ undeclared (first use in this function)
   54 |     int i = j = 0;
      |             ^
sudoku.c:54:13: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:54:9: error: unused variable ‘i’ [-Werror=unused-variable]
   54 |     int i = j = 0;
      |         ^
cc1: all warnings being treated as errors
Compilation failed
fffef6b
Thu 16 May 2024 05:36:58 PM UTC: 
 sudoku.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
fe6a5dd
Thu 16 May 2024 05:37:23 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
5bead49
Thu 16 May 2024 05:37:32 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
1e94e65
Thu 16 May 2024 05:38:17 PM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|5
total_score: 5/70
f8e4dab
Thu 16 May 2024 05:38:56 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
total_score: 15/70
71f04c4
Thu 16 May 2024 06:23:18 PM UTC: 
 sudoku.c | 45 ++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 44 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
432f2c6
Thu 16 May 2024 06:25:39 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
97f2884
Thu 16 May 2024 06:26:02 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
a889a16
